tests/data/placebo/test_cidrip_security_group_appelb_filter/elasticloadbalancing.DescribeLoadBalancers_1.json
{
    "status_code": 200,
    "data": {
        "LoadBalancers": [
            {
                "LoadBalancerArn": "arn:aws:elasticloadbalancing:us-east-1:644160558196:loadbalancer/app/c7n-270-alb-red/49f079a2192a5dbc",
                "DNSName": "c7n-270-alb-red-1543206467.us-east-1.elb.amazonaws.com",
                "CanonicalHostedZoneId": "Z35SXDOTRQ7X7K",
                "CreatedTime": {
                    "__class__": "datetime",
                    "year": 2021,
                    "month": 8,
                    "day": 18,
                    "hour": 12,
                    "minute": 33,
                    "second": 0,
                    "microsecond": 830000
                },
                "LoadBalancerName": "c7n-270-alb-red",
                "Scheme": "internet-facing",
                "VpcId": "vpc-02fca11ff9bfeaa64",
                "State": {
                    "Code": "active"
                },
                "Type": "application",
                "AvailabilityZones": [
                    {
                        "ZoneName": "us-east-1b",
                        "SubnetId": "subnet-026b91236d661da2a",
                        "LoadBalancerAddresses": []
                    },
                    {
                        "ZoneName": "us-east-1a",
                        "SubnetId": "subnet-08f1795edb0640137",
                        "LoadBalancerAddresses": []
                    }
                ],
                "SecurityGroups": [
                    "sg-090bacf6c0fa5dea8",
                    "sg-09a93cf438b73748c"
                ],
                "IpAddressType": "ipv4"
            }
        ],
        "ResponseMetadata": {}
    }
}
